# data-logger-mini

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  main  main.c  main.cpp
Pages/: live_view.c  live_view.cpp  live_view.h
lib/ADC/: ADC.hpp  CMakeLists.txt
lib/ADC/Config/lib/: DEV_Config.h
lib/ADC/Config/src/: dev_hardware_SPI.cpp
lib/ADC/lib/: ADS1263_wrapper.h
lib/ADC/src/: ADS1263_wrapper.cpp
lib/Config/: DEV_Config.cpp  Debug.h
lib/Driver/: ADS1263_wrapper.c  ADS1263_wrapper.cpp  ADS1263_wrapper.h  Loadcell.cpp  Loadcell.h
sensors/lib/: Loadcell.h
sensors/src/: Loadcell.cpp
